# opsevo-x

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  package.json
backend/: .eslintrc.js  (+5 more)
opsevo-python/: .env.example  Dockerfile  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
opsevo-python/.github/workflows/: docker-image.yml
opsevo-python/data/ai-ops/skills/: mapping.json
opsevo-python/profiles/: generic-linux.yaml  generic-snmp.yaml  mikrotik-routeros.yaml  openwrt.yaml
opsevo-python/src/opsevo/: __init__.py  container.py  main.py  settings.py
opsevo-python/src/opsevo/api/: ai.py  ai_config.py  ai_ops.py  auth.py  bff.py  connection.py  dashboard.py  dependencies.py  deps.py  devices.py  drivers.py  events.py  file_upload.py  knowledge.py  mcp.py  monitoring.py  prompt_templates.py  rag.py  skills.py  system.py  topology.py  unified_agent.py  utils.py
opsevo-python/src/opsevo/cli/: __init__.py  opsevo_skill.py
opsevo-python/tests/: conftest.py  test_bug_condition_critical.py  test_bug_condition_exploration.py  test_preservation.py  test_preservation_correct_paths.py
opsevo-python/tests/helpers/: mock_datastore.py
opsevo-python/tests/integration/: test_service_integration.py
opsevo-python/tests/property/: test_datastore_pbt.py  test_eventbus_pbt.py  test_jwt_pbt.py  test_profile_pbt.py  test_settings_pbt.py
opsevo-python/tests/unit/: test_api_endpoints.py  test_audit_fixes.py  test_skill_registry.py
(+859 files in other folders)
